# obs-realtime-translator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_JA.md  LICENSE  README.md  README_EN.md  README_UV.md  SETUP_ENV.md  pyproject.toml  requirements.txt  simple_installer.bat  translate.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
